# micro-ng

./: CMakeLists.txt  Makefile
docs/examples/project0/: project.toml
docs/examples/project0/assets/: assets.toml
docs/examples/project0/scenes/main/: scene.toml
src/: main.cc
